--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "next-with-less": "^2.0.5",
     "react": "18.2.0",
