--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.10",
     "antd": "^5.2.0",
     "clsx": "^1.2.1",
+    "emoji-picker-react": "^4.4.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "moment": "^2.29.4",
