--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "antd": "^5.2.0",
+    "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.33.0",
