--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "next": "13.1.6",
     "next-with-less": "^2.0.5",
     "react": "18.2.0",
+    "react-big-calendar": "^1.6.8",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
+    "socket.io-client": "^4.6.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
