--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react-big-calendar": "^1.6.1",
     "autoprefixer": "^10.4.13",
     "css-loader": "^6.7.3",
     "less": "^4.1.3",
