--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "antd": "^5.2.0",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
@@ -26,6 +28,7 @@
     "next": "13.1.6",
     "next-with-less": "^2.0.5",
     "react": "18.2.0",
+    "react-aws-s3-typescript": "^1.1.5",
     "react-big-calendar": "^1.6.8",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
