--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "antd": "^5.2.0",
+    "antd-img-crop": "^4.8.0",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
@@ -24,6 +25,7 @@
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^9.17.2",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "next-with-less": "^2.0.5",
