--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-big-calendar": "^1.6.8",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-idle-timer": "^5.5.3",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "socket.io-client": "^4.6.1",
